# VERIFRAX-PY

./: .gitignore  BOUNDARY.md  COLD_CLONE_NO_PUBLISH_REPLAY.json  COLD_CLONE_TAR_FILTER_WARNING_FREE.json  EXTERNAL_PYPI_CUSTODY_RUNBOOK.md  EXTERNAL_TRUSTED_PUBLISHER_CLAIMS.json  LICENSE  NO_PUBLISH_FINAL_READINESS_LEDGER.json  PACKAGE_BOUNDARY.json  PRODUCTION_PYPI_PUBLISH_AUTHORIZATION_POLICY.json  PUBLISH_WORKFLOW_ORDER_LOCK.json  PYPI_CUSTODY.json  PYPI_PRODUCTION_PUBLISH_AUTHORIZATION.json  PYPI_TRUSTED_PUBLISHER_READINESS.json  README.md  REFUSAL_POLICY.json  RELEASE_ARTIFACT_DIGEST_BOUNDARY.json  RELEASE_CANDIDATE.json  REPO_ADMISSION.json  SOURCE_BINDINGS.json  TERMINAL_BOUNDARY.json  TESTPYPI_REHEARSAL.json  VERSION_IMMUTABILITY_INDEX_REFUSAL.json  pyproject.toml
examples/: api-contract-fixture.json  incomplete-bundle.json  incomplete-receipt-projection.json  minimum-verifiable-bundle.json  receipt-projection-fixture.json  terminal-overclaim-verdict-fixture.json  terminal-recognition-fixture.json  terminal-recourse-without-recognition-fixture.json  terminal-safe-verdict-fixture.json  verdict-projection-fixture.json
governance/: REPO_ADMISSION.json
schemas/: object-chain.schema.json
scripts/: check-api-machine-contract-replay-boundary.py  check-cold-clone-no-publish-replay-boundary.py  check-cold-clone-tar-filter-warning-free-boundary.py  check-distribution-installation-replay-proof.py  check-external-trusted-publisher-claim-lock-boundary.py  check-no-publish-final-readiness-ledger.py  check-production-pypi-publish-authorization-boundary.py  (+13 more)
(+75 files in other folders)
