[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "verifrax"
version = "0.1.0"
description = "Python SDK and CLI for VERIFRAX bounded verification, evidence inspection, API access, and refusal-aware object-chain diagnostics."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Verifrax" }]
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7"
]

[project.optional-dependencies]
test = ["pytest>=8"]
build = ["build>=1.2"]

[project.scripts]
verifrax = "verifrax.cli:app"

[project.urls]
Homepage = "https://github.com/Verifrax/VERIFRAX-PY"
Repository = "https://github.com/Verifrax/VERIFRAX-PY"
Issues = "https://github.com/Verifrax/VERIFRAX-PY/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/verifrax"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
